autoscaling/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: dpl
spec:
  selector:
    matchLabels:
      deploy: hello
  template:
    metadata:
      labels:
        deploy: hello
    spec:
      containers:
        - name: app
          image: app
