autoscaling/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    deploy: dpl
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
